# ROB530

./: README.md
HW1/: HW1.py
HW1/leekt_hw1/: ROB530 - Shortcut.lnk  leekt_task2c_python.ipynb
HW2/hw2-code/: task4_python.ipynb  task5_python.ipynb
HW2/leekt_hw2/: leekt_task4_python.ipynb  leekt_task5_python.ipynb
HW3/: leekt_hw3.py  pre_cal.py  task_1a.py  task_1b.py  task_2a.py  task_2b.py  tempCodeRunnerFile.py  test.py
HW3/leekt_hw3/: task_1a.py  task_1b.py  task_2a.py  task_2b.py
HW4/: NA568 Mobile Robotics - Recitation 5 - Invariant EKF.ipynb  leekt_riekf.py
HW6/HW6_code_python/: ogm_CSM.py  ogm_S_CSM.py  ogm_continous_S_CSM.py  ogm_continuous_CSM.py  run.py  test.py
HW6/leekt_hw6/: ogm_CSM.py  ogm_S_CSM.py  ogm_continuous_CSM.py  utils.py
HW7/: .gitignore  CMakeLists.txt  Pose2SLAMExample.cpp  Pose2SLAMExample_g2o.cpp  README.md  hw7_1b.cpp  hw7_1c.cpp  hw7_2b.cpp  hw7_2c.cpp  parse_g2o.cpp
HW7/plot/: 1_b_optimized.txt  1_c_optimized.txt  2_b_optimized.txt  2_c_optimized.txt  2_initial.txt  initial.txt  plot.py  plot_1_b.py  plot_1_c.py  plot_1b.py  plot_1c.py  plot_2b.py  plot_2c.py
HW7/src/: hw7_2b.cpp
code_e_amples_export/Python/: Markov_localization_1Dexample.py
code_e_amples_export/Python/gicp/: gicp_Sim3.py  registration_example.py
code_e_amples_export/Python/linear_regression/: lin_reg.py  lin_reg_ell1.py  lin_reg_m_estimation.py
code_e_amples_export/Python/mapping/: occupancy_grid_map.py
code_e_amples_export/Python/matrix_groups/: lib.py  odometry_propagation_se2.py  pose_sync.py  (+2 more)
code_examples_export/Python/: mvn_plots.py
(+37 files in other folders)
