cmake_minimum_required(VERSION 2.8.11)
project(hw7_slam)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
set (CMAKE_CXX_STANDARD 17)

add_executable(hw7_1c src/hw7_1c.cpp)
add_executable(hw7_2b src/hw7_2b.cpp)
add_executable(hw7_2c src/hw7_2c.cpp)
# add_executable(Pose2SLAMExample Pose2SLAMExample.cpp)
# add_executable(Pose2SLAMExample_g2o Pose2SLAMExample_g2o.cpp)
add_executable(hw7_1b src/hw7_1b.cpp)

find_package(GTSAM REQUIRED)
include_directories(&{GTSAM_INCLUDE_DIR})
target_link_libraries(hw7_1c gtsam)
target_link_libraries(hw7_2b gtsam)
target_link_libraries(hw7_2c gtsam)
# target_link_libraries(hw7_slam gtsam)
# target_link_libraries(Pose2SLAMExample gtsam)
# target_link_libraries(Pose2SLAMExample_g2o gtsam)
target_link_libraries(hw7_1b gtsam)
